# iros

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .envrc  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  README.md  a.txt  abort_8cpp.html  abort_8cpp.js  abs_8h.html  abs_8h.js  abs_8h_source.html  abs__diff_8h.html  abs__diff_8h.js  abs__diff_8h_source.html  abs__unsigned_8h.html  abs__unsigned_8h.js  abs__unsigned_8h_source.html  access_8h.html  access_8h.js  access_8h_source.html  acpi_8cpp.html  acpi_8cpp.js  acpi_8h.html  acpi_8h.js  acpi_8h_source.html  add__member__get_8h.html  add__member__get_8h.js  add__member__get_8h_source.html  address__space_8h.html  address__space_8h.js  (+17090 more)
boot/: CMakeLists.txt  Makefile
initrd/: CMakeLists.txt  Makefile  initrd.c
initrd/files/: a.txt  b.txt  test.sh
initrd/programs/: alarm_test.cpp  aligned_alloc_test.c  barrier_test.c  broken.c  broken.cpp  cancel_test.cpp  cat.c  chmod.c  cleanup_handler_test.c  clear.c  cond_test.c  coroutine_test.cpp  deflate_test.cpp  detached_thread_test.cpp  dl_iter_test.cpp  dlopen_test.c  event_loop_thread_test.cpp  event_loop_timer_test.cpp  execve_waitpid_test.c  fault_test.c  fread_test.c  fwrite.c  getcpuclockid_test.c  getopt_test.c  getrusage_test.c  glob_test.c  graphics_test.cpp  guess.c  hash_map_test.cpp  if_test.c  ipc_test.cpp  itimer_test.cpp  json_test.cpp  kill.c  kilo.c  link.ld  linked_list_test_a.cpp  local_socket_client_test.c  local_socket_server_test.c  ls.c  (+74 more)
iris/: CMakeLists.txt  README.md  data.txt  test_create_task.cpp  test_read.cpp  test_userspace.cpp
iris/boot/: init.cpp  limine.cfg
iris/core/: cxx.cpp  global_state.cpp  interruptible_spinlock.cpp  preemption.cpp  print.cpp  scheduler.cpp  spinlock.cpp  task.cpp  task_namespace.cpp  task_status.cpp  unit_test.cpp  wait_queue.cpp
iris/fs/: debug_file.cpp  initrd.cpp  inode.cpp  path.cpp  super_block.cpp  tmpfs.cpp
iris/hw/: irq.cpp  irq_controller.cpp  timer.cpp
iris/mm/: address_space.cpp  backing_object.cpp  heap.cpp  page_frame_allocator.cpp
iris/uapi/: syscall.cpp
kernel/: CMakeLists.txt  Makefile
kernel/boot/: boot_info.c
kernel/display/: terminal.c
kernel/fs/: cached_dirent.c  dev.c  disk_sync.c  ext2.c  fs_manager.c  initrd.c  inode_store.c  mount.c  pipe.c  procfs.c  tmp.c  tnode.c  vfs.c  watch.c
kernel/hal/: block.c  devices.c  gpt.c  hw_device.c  hw_timer.c  isa_driver.c  mbr.c  output.c  partition.c  pci.c  pci_driver.c  processor.c  ptmx.c  tty.c
kernel/interrupts/: interrupts.c
kernel/irqs/: handlers.c  irqs.c  sys_calls.c
kernel/main/: kernel.c
kernel/mem/: anon_vm_object.c  inode_vm_object.c  page_frame_allocator.c  phys_page.c  phys_vm_object.c  vm_allocator.c  vm_object.c  vm_region.c
kernel/net/: arp.c  destination_cache.c  dhcp.c  ethernet.c  icmp.c  icmp_socket.c  inet_socket.c  interface.c  ip.c  loopback.c  mac.c  neighbor_cache.c  net.c  network_process.c  network_task.c  packet.c  port.c  route_cache.c  socket.c  socket_syscalls.c  tcp.c  tcp_socket.c  udp.c  udp_socket.c  umessage.c  unix_socket.c
kernel/proc/: blockers.c  elf64.c  exec.c  fork.c  pid.c  process.c  process_state.c  profile.c  stats.c  task.c  task_finalizer.c  user_mutex.c  wait_queue.c
kernel/sched/: process_sched.c  task_sched.c
kernel/time/: clock.c  timer.c
kernel/util/: bitset.c  hash_map.c  mutex.c  ring_buffer.c  spinlock.c  validators.c
libs/ccpp/: .clang-tidy  .clangd  CMakeLists.txt
libs/di/: CMakeLists.txt
libs/dius/: CMakeLists.txt  di_assert_impl.cpp  error.cpp  memory_region.cpp  sync_file.cpp
libs/libapp/: CMakeLists.txt  app.cpp  application.cpp  application_os_2.cpp  application_sdl.cpp  box_layout.cpp  button.cpp  context_menu.cpp  event_loop.cpp  file_system_model.cpp  flex_layout_engine.cpp  icon_view.cpp  layout.cpp  layout_engine.cpp  menubar.cpp  model.cpp  mouse_press_tracker.cpp  object.cpp  scroll_component.cpp  selectable.cpp  selectable_file.cpp  splitter.cpp  tab_widget.cpp  table_view.cpp  terminal_widget.cpp  text_label.cpp  timer.cpp  tree_view.cpp  udp_socket.cpp  unix_socket.cpp  unix_socket_server.cpp  view.cpp  widget.cpp  window.cpp  window_os_2.cpp  window_sdl.cpp
libs/libc/: CMakeLists.txt  Makefile  __cxa_atexit.c  cxx.cpp  init.c
libs/libclipboard/: CMakeLists.txt  connection.cpp
libs/libdius/: CMakeLists.txt  di_assert_impl.cpp  fd_read_writer.cpp  fd_writer.cpp  memory_region.cpp  sync_file.cpp
libs/libedit/: CMakeLists.txt  actions.cpp  command.cpp  cursor.cpp  display.cpp  document.cpp  document_type.cpp  keyboard_action.cpp  line.cpp  line_renderer.cpp  multicursor.cpp  panel.cpp  rendered_line.cpp  selection.cpp  suggestions.cpp  text_range.cpp  text_range_collection.cpp
libs/libeventloop/: CMakeLists.txt  base_widget.cpp  component.cpp  event_loop.cpp  file_watcher.cpp  input_tracker.cpp  key_bindings.cpp  mouse_press_tracker.cpp  object.cpp  object_bound_coroutine.cpp  selectable.cpp  selectable_file.cpp  timer.cpp  udp_socket.cpp  unix_socket.cpp  unix_socket_server.cpp
libs/libext/: CMakeLists.txt  checksum_adler32.cpp  checksum_crc32.cpp  checksum_internet.cpp  deflate.cpp  file.cpp  generic_mode_parser.cpp  gzip.cpp  mapped_file.cpp  mode.y  mode_value.h  new_file.cpp  parse_mode.cpp  path.cpp  stream.cpp  stream_decoder.cpp  system.cpp  zlib_stream.cpp
libs/librt/: CMakeLists.txt  Makefile
libs/libsh/: CMakeLists.txt  generic_sh_parser.cpp  sh.y  sh_lexer.cpp
libs/libtinput/: CMakeLists.txt  file_input_source.cpp  history.cpp  input_source.cpp  io_terminal.cpp  repl.cpp  repl_display.cpp  repl_display.h  repl_panel.cpp  repl_panel.h  string_input_source.cpp  terminal_glyph.cpp  terminal_input_parser.cpp  terminal_input_source.cpp  terminal_renderer.cpp
libs/libtui/: CMakeLists.txt  application.cpp  flex_layout_engine.cpp  frame.cpp  label.cpp  panel.cpp  root_window.cpp  scroll_component.cpp  splitter.cpp  table_view.cpp  terminal_panel.cpp  tree_view.cpp  (+2 more)
userland/: CMakeLists.txt  Makefile  Makefile.common  link.ld
(+6074 files in other folders)
