file (GLOB INITRD_PROGRAMS "programs/*.c*")

foreach (SOURCES ${INITRD_PROGRAMS})
    get_filename_component(PROGRAM_NAME ${SOURCES} NAME_WE)
    add_os_executable(${PROGRAM_NAME} boot/initrd)
endforeach()

target_link_libraries(cancel_test pthread)
target_link_libraries(cleanup_handler_test pthread)
target_link_libraries(cond_test pthread)
target_link_libraries(detached_thread_test pthread)
target_link_libraries(getcpuclockid_test pthread)
target_link_libraries(hash_map_test liim)
target_link_libraries(linked_list_test_a liim)
target_link_libraries(once_test pthread)
target_link_libraries(map_shared_test pthread)
target_link_libraries(mutex_test pthread)
target_link_libraries(pthread_atfork_test pthread)
target_link_libraries(pthread_attr_test pthread)
target_link_libraries(regex_test liim)
target_link_libraries(shared_memory_test rt)
target_link_libraries(smart_pointer_test liim)
target_link_libraries(string_test liim)
target_link_libraries(test_regex liim parser_headers)
target_link_libraries(thread_specific_data_test pthread)
target_link_libraries(thread_test pthread)
target_link_libraries(tls_test pthread)
target_link_libraries(tgkill_test pthread)
target_link_libraries(timer_overrun_test rt)
target_link_libraries(timer_test rt)
target_link_libraries(vector_test liim)
target_link_libraries(window_server_test liim graphics ws)
target_link_libraries(vga_test_a kernel_headers)