file (GLOB INITRD_PROGRAMS "programs/*.c*" "programs/*.S")

foreach (SOURCE ${INITRD_PROGRAMS})
    get_filename_component(PROGRAM_NAME ${SOURCE} NAME_WE)
    set(SOURCES ${SOURCE})
    add_os_executable(${PROGRAM_NAME} boot/initrd)
    set(PRIVATE_INITRD_TARGETS ${PRIVATE_INITRD_TARGETS} ${PROGRAM_NAME})
endforeach()

set(INITRD_TARGETS ${PRIVATE_INITRD_TARGETS} PARENT_SCOPE)

target_link_libraries(cancel_test ${PTHREAD_LIB})
target_link_libraries(cleanup_handler_test ${PTHREAD_LIB})
target_link_libraries(cond_test ${PTHREAD_LIB})
target_link_libraries(detached_thread_test ${PTHREAD_LIB})
target_link_libraries(dlopen_test ${DL_LIB} ${PTHREAD_LIB})
target_link_options(dlopen_test PRIVATE -rdynamic)
target_link_libraries(getcpuclockid_test ${PTHREAD_LIB})
target_link_libraries(graphics_test libapp)
target_link_libraries(hash_map_test libliim)
target_link_libraries(linked_list_test_a libliim)
target_link_libraries(once_test ${PTHREAD_LIB})
target_link_libraries(map_shared_test ${PTHREAD_LIB})
target_link_libraries(mutex_test ${PTHREAD_LIB})
target_link_libraries(png_test libapp)
target_link_libraries(pthread_atfork_test ${PTHREAD_LIB})
target_link_libraries(pthread_attr_test ${PTHREAD_LIB})
target_link_libraries(rect_set_test libapp)
target_link_libraries(regex_test libliim)
target_link_libraries(shared_memory_test ${REALTIME_LIB})
target_link_libraries(smart_pointer_test libliim)
target_link_libraries(string_test libliim)
target_link_libraries(thread_specific_data_test ${PTHREAD_LIB})
target_link_libraries(thread_test ${PTHREAD_LIB})
target_link_libraries(threaded_execve ${PTHREAD_LIB})
target_link_libraries(tls_test ${PTHREAD_LIB})
target_link_libraries(test_cpp_a ${PTHREAD_LIB})
target_link_libraries(tgkill_test ${PTHREAD_LIB})
target_link_libraries(timer_overrun_test ${REALTIME_LIB})
target_link_libraries(timer_test ${REALTIME_LIB})
target_link_libraries(vector_test libliim)
target_link_libraries(window_server_test libliim libgraphics libws)
